# TUKOJ

./: docker-compose.yml
Backend/: .dockerignore  .gitignore  Dockerfile.backend  pyproject.toml
Backend/config/: settings.py
Backend/problems/: models.py  serializers.py  urls.py  views.py
Backend/problems/migrations/: 0002_codingproblem_test_cases_testcase.py  0003_remove_codingproblem_test_cases.py
Backend/solutions/: models.py  views.py
Backend/solutions/migrations/: 0002_solution_test_case_results.py
Frontend/: Dockerfile.frontend  package-lock.json  package.json
Frontend/src/Editor/: editor.js
Frontend/src/Login/: Login.jsx  Register.jsx
Frontend/src/Main/: main.js
Frontend/src/Manage_problem/: create_problem.js  delete_problem.js  edit_problem.js  manage.js
Frontend/src/OX_quiz/: QuizPage.js
Frontend/src/ShortQuiz/: shortQuiz.js
Frontend/src/component/: Comments.js
Frontend/src/component/list/: Communitylist.js  Problemlist.js
Frontend/src/component/page/: MainCommunity.js  PostEditPage.js  PostViewPage.js  PostWritePage.js
Frontend/src/component/page/routes/: BoardUpdate.js
judge-server/: Dockerfile.judgeservice  app.py  requirements.txt
nginx/: nginx.conf
