[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["charry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
